[package]
name = "i3helper"
version = "0.1.0"
authors = ["Vlad Vasiliu <vladvasiliun@yahoo.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
log = "0.4"
systemd-journal-logger = "1"
tokio = { version = "1", features = ["macros", "net", "rt", "signal", "sync"] }
tokio-i3ipc = "0.16"
xdg = "2.5"

[profile.release]
lto = true
incremental = true
codegen-units = 1
panic = "abort"
strip = true
